refactor all controller files